spade-tests/src/snapshots/spade_tests__ast_lowering__tests__multiple_labels_for_same_stage.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Stage already has label a
  ┌─ testinput:4:10
  │
3 │         'a
  │          - Previously labeled here
4 │         'b
  │          ^ Duplicate label


